# altcdp

./: .gitignore  Cargo.toml  README.md
db/: create.sql  docker_command.txt  drop.sql  populate.sql  teste.sql
db/data/: postmaster.pid
db/data/base/1/: 1259  2619  2619_vm  2696  pg_internal.init
db/data/base/5/: 1247  1249  1259  16468  16469  16473  16475  16476  16480  16487  16495  2224  2579  2604  2606  2608  2610  2619  2619_fsm  2619_vm  2620  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  2696  2699  2701  2702  2703  (+4 more)
db/data/global/: 1260  pg_control  pg_internal.init
src/: handlers.rs  lib.rs  main.rs  queries.rs  structs.rs  templates.rs
src/handlers/: oficinas.rs  usuarios.rs
src/queries/: oficinas.rs  usuarios.rs
src/structs/: oficinas.rs  usuarios.rs
t/data/: postmaster.pid
t/data/base/1/: 1259  2619  2619_vm  2696  pg_internal.init
t/data/base/5/: 1247  1249  1249_fsm  1259  16772  16773  16777  16779  16780  16784  16791  16794  16801  16804  2224  2579  2604  2606  2608  2608_fsm  2608_vm  2610  2619  2619_fsm  2619_vm  2620  2620_vm  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  (+12 more)
t/data/global/: 1260  pg_control  pg_internal.init
t/data/pg_xact/: 0000
templates/: base.html  criar_oficina.html  index.html  inscreva_se.html  login.html  oficina.html  oficinas.html  perfil.html
