[package]
name = "altcdp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.2", features = ["macros", "multipart"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
sqlx = { version = "0.7.3", features = ["runtime-tokio-rustls", "postgres", "macros", "chrono"] }
tokio = { version = "1.24.1", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
askama = { version = "0.12.1", features = ["markdown"] }
tower-sessions = "0.9.1"
tower = "0.4.13"
time = "0.3.31"
pulldown-cmark = "0.9.3"
